# temporal-kt

./: .editorconfig  .gitignore  .gitmodules  .sdkmanrc  Progress.md  Proposals.md  README.md  build.gradle.kts  context7.json  gradle.properties  jreleaser.yml  settings.gradle.kts
.claude/agents/: temporal-kotlin-sdk-expert.md
.github/workflows/: buildtest.yml  dependency_submission.yml  publish.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts  (+1 more)
compiler-plugin/: README.md  build.gradle.kts
core/: build.gradle.kts
core-bridge/: README.md  build.gradle.kts  includes.txt
core-bridge/rust/: Cargo.toml  build.rs
core-bridge/rust/src/: lib.rs
core-common/: build.gradle.kts
core-testing/: build.gradle.kts
core/api/: core.api
docs/: ACTIVITIES_IMPERATIVE.md  AUTH_SETUP_GUIDE.md  CODECS_AND_SERIALIZATION.md  COMPILER_PLUGIN.md  CONCURRENCY_ARCH.md  CONFIGURATION.md  DEV_SETUP.md  FAILURES.md  GETTING_STARTED.md  JAVA_MIGRATE.md  LOGGING.MD  PLUGINS.md  TESTING.md  WORKFLOWS_IMPERATIVE.md
docs/proposals/: TKT-0001-annotations.md  TKT-0002-interfaces.md  TKT-0003-inline.md  TKT-0004-dependency-injection.md  TKT-0005-modules.md  TKT-0006-dsl-scope.md  TKT-0008-non-suspending.md  TKT-0009-routing.md  TKT-0010-testing.md  TKT-0011-payload-codec.md  TKT-0012-payload-serializer.md  TKT-0013-ktor-subroutine.md  TKT-0015-context-resolution.md
examples/config-driven/: build.gradle.kts
examples/hello-world/: build.gradle.kts
examples/multi-worker/: build.gradle.kts
examples/otel-verify/: build.gradle.kts  docker-compose.yml
gradle/: libs.versions.toml
gradle-plugin/: README.md  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
plugins/di/: README.md  build.gradle.kts
plugins/health/: README.md  build.gradle.kts
plugins/jib/: README.md  build.gradle.kts
plugins/opentelemetry/: README.md  build.gradle.kts
proposals/: TKT-0001-annotations.md  TKT-0002-interfaces.md  TKT-0003-inline.md  TKT-0004-dependency-injection.md  TKT-0005-modules.md  TKT-0007-determinism.md  TKT-0008-non-suspending.md  TKT-0009-routing.md  TKT-0014-coroutine-scopes.md
temporal-kt/: build.gradle.kts
(+465 files in other folders)
